k8s/apps/mi-cv-web/service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: mi-cv-web-svc
  namespace: apps
  labels:
    app: mi-cv-web
spec:
  selector:
    app: mi-cv-web
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-cv-web-ingress
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: cv.marco-sr.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mi-cv-web-svc
                port:
                  number: 3000
